@@ -1,5 +1,6 @@
 0.12
  - Fix subfield processing for multiple values.
+ - Rewrite Item to use external_ids() method to generate external ids.
  - Rewrite Transform to store external ids in 'external_ids' parameter.
 
 0.11 2024-07-03T16:36:27+02:00
